[package]
name = "hoplophrys"
version = "0.0.1"
edition = "2024"
license = "MIT"
authors = ["Vivek Tiwari <beeb5k6@gmail.com>"]
description = """
hoplophrys is an open-source backend in one file
like pocketbase but in rust.
"""
repository = "https://github.com/beeb5k/hoplophrys"

[[bin]]
name = "hoplophrys"
path = "crates/core/main.rs"

[workspace]
members = []

[dependencies]
axum = "0.8.6"
tokio = {version = "1.48.0", features = ["full"]}
