[package]
name = "hoplophrys"
version = "0.0.1"
edition = "2024"
description = """
Hoplophrys is an open-source backend in one file
like pocketbase but in Rust!.
"""
repository = "https://github.com/beeb5k/hoplophrys"
license = "MIT"

[workspace]
members = []

[workspace.package]
edition = "2024"
repository = "https://github.com/beeb5k/hoplophrys"
license = "MIT"

[dependencies]
axum = "0.8.6"
tokio = {version = "1.48.0", features = ["full"]}
